tests/good/types/1.tam
; Generated code for tests/good/types/1.moc.
; Do not modify by hand
; no code
