tests/bad/types/3.tam
; Generated code for tests/bad/types/3.moc.
; Do not modify by hand
; no code
